--- a/public/css/_var.scss
+++ b/public/css/_var.scss
@@ -10,7 +10,7 @@ $c-green: #0F0;
 $c-cyan: #0EFFFF;
 $c-blue: #1800FF;
 $c-purple: #9200FF;
-$c-fuchsia: #F305E8;
+$c-fuchsia: #FF00FF;
 
 
 // fonts
